[tool.poetry]
name = "hive-rc-auto"
version = "1.4.0"
description = "A system for managing RC Resource Credits on Hive"
authors = ["Brian of London <brian@podping.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.13.0"
watchdog = "^2.1.9"
black = "^22.10.0"
pydantic = "^1.10.2"
lighthive = "^0.4.0"
python-dotenv = "^0.21.0"
streamlit-autorefresh = "^0.0.1"
plotly = "^5.10.0"
single-source = "^0.3.0"
pymssql = "^2.2.5"
hived-rpc-scanner = "^0.1.1"
motor = "^3.0.0"
nbformat = "^5.7.0"
ipykernel = "^6.16.2"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
ipykernel = "^6.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"